@@ -245,11 +245,6 @@ Properties
   </tr>
 
   <tr>
-  <th>Priority</th>
-  <td><tmpl_var priority_selector></td>
-  </tr>
-
-  <tr>
   <th>Current Version</th>
   <td><tmpl_var escape=html version></td>
   </tr>
