@@ -112,11 +112,6 @@ Properties
   </tr>
 
   <tr>
-  <th>Priority</th>
-  <td><tmpl_var escape=html priority></td>
-  </tr>
-
-  <tr>
   <th>Contributors</th>
   <td>
   <tmpl_if contribs_loop>
